<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Icarus</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sensor_test">Test des capteurs disponibles</string>
    <string name="accelerometer">Accelerometre</string>
    <string name="gravity">Gravité</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="linear_acceleration">Acceleration linéaire</string>
    <string name="magnetic_field">Champ magnetique</string>
    <string name="orientation">Orientation</string>
    <string name="pressure">Pression</string>
    <string name="rotation_vector">Vecteur de rotation</string>
    <string name="valeurs">Valeurs</string>
    <string name="title_activity_test_values">TestValuesActivity</string>
    <string name="menu_capteurs">Capteurs</string>
    <string name="menu_valeurs">Valeurs</string>
    <string name="axeX">Axe X</string>
    <string name="axeY">Axe Y</string>
    <string name="axeZ">Axe Z</string>
    <string name="position">Position</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="direction">Direction</string>
    <string name="azimuth">Azimuth</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="altitude">Altitude</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="flightName">Nom du vol</string>
    <string name="pilote">Pilote</string>
    <string name="avion">Avion</string>
    <string name="depart">Départ</string>
    <string name="intervaleMesures">Intervalle des mesures</string>
    <string name="remarques">Remarques</string>
    <string name="calibrerAltitude">Calibrer Altitude</string>
    <string name="resetPitchAndRoll">RAZ Pitch et Roll</string>
    <string name="calibrerAzimuth">Calibrer Azimuth</string>
    <string name="startRecording">Démarrer enregistrement</string>
    <string name="recording">Enregistrement en cours...</string>
    <string name="stopRecording">Arrêter l\'enregistrement</string>
    <string name="title_activity_transmission">TransmissionActivity</string>
    <string name="recordingStopped">Enregistrement terminé</string>
    <string name="sendRecordByMail">Envoyer l\'enregistrement par e-mail ?</string>
    <string name="send">Envoyer</string>
    <string name="sendRecordToServer">Envoyer l\'enregistrement au serveur :</string>
    <string name="recordPrivacy">Enregistrement privé</string>
    <string name="privateRecord">Privé</string>
    <string name="publicRecord">Public</string>
    <string name="password">Mot de passe</string>
    <string name="recordVisibility">Enregistrement invisible</string>
    <string name="quitWithoutSendingRecord">Quitter sans envoyer</string>
    <string name="recordPath">Emplacement du fichier :</string>
    <string name="title_activity_login">Identification</string>
    <string name="login">Identifiant</string>
    <string name="logon">Se connecter</string>
    <string name="valeur">Valeur</string>
    <string name="currentAzimuth">Cap actuel</string>
    <string name="hintPressure">Entrer la pression QNH (hPa)</string>
    <string name="hintAltitude">Entrer l\'altitude actuelle (m)</string>
    <string name="useAltitude">Utiliser l\'altitude</string>
    <string name="usePressure">Utiliser la pression</string>
    <string name="noAccount">Je ne possède pas de compte</string>

</resources>