
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewFlightName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flightName" />

            <EditText
                android:id="@+id/editTextFlightName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewUnitHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilote" />

            <EditText
                android:id="@+id/editTextPilote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avion" />

            <EditText
                android:id="@+id/editTextAvion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewCurrentAzimuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depart" />

            <EditText
                android:id="@+id/editTextDepart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarques" />

            <EditText
                android:id="@+id/editTextRemarques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:lines="2"
                android:singleLine="false" />
           
        </TableRow>
        

        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intervaleMesures"
                android:width="100dp" />

            <SeekBar
                android:id="@+id/seekBarUpdateInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewUpdateIntervalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0 s"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonCalibrerAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/calibrerAltitude" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonResetPitchRoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/resetPitchAndRoll" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonCalibrerAzimuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/calibrerAzimuth" />

        </TableRow>


        
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonStartRecording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:enabled="false"
                android:height="75dp"
                android:text="@string/startRecording"
                android:textSize="25dp" />

        </TableRow>
        
    </TableLayout>
